src/test/deca/syntax/invalid/invalid_assign.deca
// Description :
//    assign invalid
//
// Resultats :
//    Erreur syntaxique
//    Ligne 8 : no viable alternative at input '5'

5 = x;
